--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -187,7 +187,7 @@ body{
     &:after{
         #line_bottom() //向下细线
     }
-    div:nth-child(4){
+    div:nth-child(5){
         width:50px;
         position:relative;
         &:after{
@@ -198,6 +198,12 @@ body{
     i.icon-viewgallery{
         font-size:16px
     }
+}
+.navMargin{
+    height:40px;
+}
+.am-list-item .am-input-label{
+    font-size:.25rem;
 }
 .am-grid{
 
@@ -358,6 +364,9 @@ div.car{
 }
 .rowMotoText{
     text-align:left;
+    p{
+        padding:.1rem 0 0 0;
+    }
     div{
         margin-bottom:5px
     }
