--- a/src/Template/index.html
+++ b/src/Template/index.html
@@ -10,10 +10,11 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <link href="//at.alicdn.com/t/font_0zex7aq4j7lrqkt9.css" rel="stylesheet">
+
     <title></title>
 </head>
 
 <body>
 </body>
-
+<script type="text/javascript" src="cordova.js"></script>
 </html>
