--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -199,7 +199,7 @@ body{
         }
     }
     i{padding-left:2px;font-size:10px;color:#888}
-    i.icon-viewgallery{
+    i.icon-viewgallery,i.icon-viewlist{
         font-size:16px
     }
 }
