--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -576,7 +576,7 @@ div.car{
 .father{
     margin:10px;
     background:#fff;
-    padding:10px 2px 65px 2px;
+    padding:65px 2px 10px 2px;
     h1{
         font-size:18px;text-align:center;
     }
@@ -592,6 +592,7 @@ div.car{
                 padding:10px 2px;
                 border-left:1px solid #333;
                 border-bottom:1px solid #333;
+                word-break: break-all;
                 input{
                     border:0;
                     background:none;
