--- a/src/Template/index.html
+++ b/src/Template/index.html
@@ -12,6 +12,10 @@
     <link href="//at.alicdn.com/t/font_0zex7aq4j7lrqkt9.css" rel="stylesheet">
 
     <title></title>
+    <script>
+        var $A = 'http://47.94.230.18/motor/extTelSendCode.ext'; //发送短信验证码
+        var $extTelMsgLogin = 'http://47.94.230.18/motor/extTelMsgLogin.ext'; //免密登录
+    </script>
 </head>
 
 <body>
