--- a/src/Template/index.html
+++ b/src/Template/index.html
@@ -13,7 +13,7 @@
 
     <title></title>
     <script>
-        var $A = 'http://47.94.230.18/motor/extTelSendCode.ext'; //发送短信验证码
+        var $extTelSendCode = 'http://47.94.230.18/motor/extTelSendCode.ext'; //发送短信验证码
         var $extTelMsgLogin = 'http://47.94.230.18/motor/extTelMsgLogin.ext'; //免密登录
     </script>
 </head>
