图片提交优化:

--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -232,9 +232,12 @@
     }
 
     i.iconfont{
-        font-size:50px;
-        color:#74777b;
+        font-size: 40px;
+        color: #74777b;
+        position: relative;
+        top: -8px;
     }
+
     i.icon-shanchu{
         display:none;
     }
@@ -258,13 +261,15 @@
 }
 .cropWrap{
     text-align:left;
+    margin-top:10px;
+    margin-bottom: 6px;
 }
 .imageChooseDone{
     position:relative;
     overflow: visible!important;
     img{
         border:1px solid #ccc;
-        height:35px;
+        height:45px;
     }
     i.icon-shanchu{
         display: inline-block;
@@ -278,5 +283,8 @@
         margin-right: -15px;
         opacity: .6;
     }
+}
+.imageChoose .imageChooseWorkSpace{
+    margin-top:8px;
 }
 
