--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -208,6 +208,7 @@
         margin-left: -12px;
     }
 }
+/*
 .ReactCrop__crop-selection:after{
     content:'选择区域';
     width:200px;
@@ -221,12 +222,13 @@
     text-align:center;
     line-height:30px;
 }
+*/
 .imageChoose{
     width:25%;
     position:relative;
     display:inline-block;
     p{
-        position:fixed;z-index:99992;width:60px;text-align:center;background:#fff;border-radius:5px;line-height:30px;height:30px;top:20px;right:20px;color:#888
+        box-shadow: 0 0 5px #000; position:fixed;z-index:99992;width:60px;text-align:center;background:#fff;border-radius:5px;line-height:30px;height:30px;top:20px;right:20px;color:#888
     }
 
     i.iconfont{
