--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -111,6 +111,9 @@ body{
     .detail-wrap{
         margin:.2rem;
     }
+    .sub-title{
+        border-top:7px solid #f1f1f1;
+    }
     .content{
         color:@baseColor;
         margin:0 .3rem;
@@ -228,7 +231,7 @@ body{
     position:relative;
     text-align:left;
     text-indent:.3rem;
-     padding: 20px .3rem 12px 0!important;
+     padding: 12px .3rem 12px 0!important;
     span{
         color:@baseBlue;
         float:right;
@@ -299,7 +302,14 @@ body{
 }
 
 .am-list-header{
-    text-align:left
+    text-align:left;
+    padding:.26rem!important;
+    background:#f8f8f8;
+    color: #108ee9;
+    border-left: 5px solid #108ee9;
+}
+.index-list-panel:nth-child(1) .blank{
+   display: none;
 }
 div.car{
     background:url(../Images/car.jpg);
