--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -152,6 +152,12 @@ body{
     color:#333;
     display:inline-block;
     text-align:center;
+    img{
+        width:60%;
+    }
+    span{
+        display:block
+    }
 }
 .topNavBar{
     height:38px;
