--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -253,7 +253,8 @@ body{
     max-height:200px;
     overflow-y:auto;
     overflow-x:hidden;
-    background: #fdfdfd;
+    background: #f9f9f9;
+    box-shadow: 0 3px 5px #eee;
     ul li{
         line-height:2.5;
         padding:0 10px;
@@ -896,7 +897,7 @@ div.car{
 }
 .am-tag-close {
     position: absolute;
-    top: .05rem;
+    top: .07rem;
     right: .05rem;
     left: auto;
     color: #bbb;
@@ -908,7 +909,7 @@ div.car{
 .am-tag {
     display: inline-block;
     position: relative;
-    font-size: .20rem;
+    font-size: .22rem;
     text-align: center;
     margin:.05rem;
     padding: 0 .35rem 0 .05rem;
