--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -232,10 +232,11 @@
     }
 
     i.iconfont{
-        font-size: 40px;
+        font-size: 34px;
         color: #74777b;
         position: relative;
-        top: -8px;
+        height: 40px;
+
     }
 
     i.icon-shanchu{
@@ -253,6 +254,17 @@
     }
     .imageChooseWorkSpace{
         text-align:center;
+
+        border: 1px solid #ddd;
+        border-radius: 5px;
+    }
+    .title{
+        display:block;
+        text-align:center;
+        font-size: .2rem;
+        margin-top: 3px;
+        padding-bottom: 10px;
+        color: #777;
     }
     canvas{
         position:absolute;
@@ -269,7 +281,10 @@
     overflow: visible!important;
     img{
         border:1px solid #ccc;
-        height:45px;
+        height:40px;
+        border-radius:5px;
+        width:90%!important;
+        margin-left:5%;
     }
     i.icon-shanchu{
         display: inline-block;
@@ -279,12 +294,15 @@
         border-radius: 50%;
         right: 50%;
         top: 50%;
-        margin-top: -15px;
+        margin-top: -28px;
         margin-right: -15px;
-        opacity: .6;
+        opacity: .7;
     }
 }
+
 .imageChoose .imageChooseWorkSpace{
-    margin-top:8px;
+    height: 40px;
+    width: 90%;
+    margin-left: 5%;
 }
 
