增加个人中心板块``

--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -271,10 +271,14 @@
         top: -9999px;
     }
 }
+
 .cropWrap{
     text-align:left;
     margin-top:10px;
     margin-bottom: 6px;
+}
+.mySetting .cropWrap{
+    text-align:center;
 }
 .imageChooseDone{
     position:relative;
