--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -42,7 +42,6 @@ body{
     transform: @transform;
 }
 .my-own{
-    padding-top:50px;
     .none{
         color:@baseColor;
         text-align:center;
@@ -71,7 +70,8 @@ body{
 
 .myTop{
     height:110px;
-    background:@baseBlue;
+    background: url(../Images/bg.jpg);
+    background-size: 100% 110px;
     text-align:center;
     color:#fff;
     position: relative;
@@ -335,6 +335,7 @@ div.car{
 }
 .my-carousel a img {
     width: 100%;
+    height:100%;
     vertical-align: top;
 }
 .my-carousel .v-item {
