--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -69,9 +69,9 @@ body{
 }
 
 .myTop{
-    height:110px;
+    height:130px;
     background: url(../Images/bg.jpg);
-    background-size: 100% 110px;
+    background-size: 100% 130px;
     text-align:center;
     color:#fff;
     position: relative;
@@ -93,6 +93,13 @@ body{
         top:.3rem;
         font-size:.5rem;
     }
+    i.icon-edit{
+        font-size:10px;
+        color:#666;
+        padding-bottom:3px;
+        display: inline-block;
+    }
+
 }
 .btnWrap{
     margin:.3rem;
@@ -179,7 +186,7 @@ body{
     }
     span:nth-child(2){
         text-align:center;
-        text-indent:-50px;
+        text-indent: -15px;
         color:@baseColor;
     }
 }
