i add files ,modify myCenter

--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -7,7 +7,8 @@
     cursor: crosshair;
     overflow: hidden;
     max-width: 100%;
-    z-index:2
+    z-index:2;
+
 }
 .ReactCrop--disabled {
     cursor: inherit;
