--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -119,7 +119,7 @@ body{
         margin:.2rem;
     }
     .sub-title{
-        border-top:7px solid #f1f1f1;
+        border-top:5px solid #ddd;
     }
     .content{
         color:@baseColor;
