--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -155,6 +155,10 @@
 .ReactCrop--fixed-aspect .ReactCrop__drag-handle.ord-n, .ReactCrop--fixed-aspect .ReactCrop__drag-handle.ord-e, .ReactCrop--fixed-aspect .ReactCrop__drag-handle.ord-s, .ReactCrop--fixed-aspect .ReactCrop__drag-handle.ord-w {
     display: none;
 }
+.ReactCrop--fixed-aspect{
+    overflow:visible;
+    z-index:999;
+}
 @media (max-width: 768px) {
     .ReactCrop__drag-handle {
         width: 17px;
@@ -254,9 +258,7 @@
         left:0;
     }
     .imageChooseWorkSpace{
-        text-align:center;
-
-        border: 1px solid #ddd;
+        text-align:center;;
         border-radius: 5px;
     }
     .title{
