modify style.less fixed ios upload img bug

--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -960,7 +960,7 @@ div.car{
     }
 }
 .am-tab-bar-content .am-tab-bar-tabpane{
-    overflow-x:hidden;
+    overflow-x:hidden!important;
 }
 .am-carousel-wrap{
     display:none
