add native camera upload

--- a/src/Style/imageChoose.less
+++ b/src/Style/imageChoose.less
@@ -312,4 +312,9 @@
     width: 90%;
     margin-left: 5%;
 }
-
+.mySetting .imageChooseDone img {
+    border: 1px solid #ccc;
+    height: 70px;
+    border-radius: 50%;
+    width: 70px!important;
+}
