--- a/src/Style/style.less
+++ b/src/Style/style.less
@@ -269,12 +269,13 @@ body{
     text-align:left;
     text-indent:.3rem;
      padding: 12px .3rem 12px 0!important;
+    border-bottom:1px solid #ddd;
     span{
         color:@baseBlue;
         float:right;
     }
     &:after{
-        #line_bottom(scaleY(.5),auto,auto,0px,auto) //向下细线
+      //  #line_bottom(scaleY(.5),auto,auto,0px,auto) //向下细线
     }
 }
 .match_subnav{
